--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 Making ultimate background using css
 if enjoy subscribe
-<h1>This is the background</h1>
+<h1>This is the background and a new idea
+</h1>
 </body>
 </html>
