--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+
+	<link rel="stylesheet" href="style.css">
 	<title>Back Ground</title>
 </head>
-<body>
-Making ultimate background using css
-if enjoy subscribe
-<h1>This is the background and a new idea
-</h1>
+
+<body id="gradient">
+
+	<h1>BackGround Generator for you
+	</h1>
+	<input type="color" name="color1" class="color1" value="#0000ff">
+	<input type="color" name="color2" class="color2" value="#00ff00">
+
+	<h2></h2>
+	<script type="text/javascript" src="script.js"></script>
 </body>
+
 </html>
